--- a/app/src/main/res/layout/terminal_row_item_layout.xml
+++ b/app/src/main/res/layout/terminal_row_item_layout.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="100dp">
+    android:background="@drawable/terminal_list_item_bg"
+    android:layout_height="100dp"
+    android:layout_marginBottom="5dp"
+    >
 
     <ImageView
         android:id="@+id/imageView"
@@ -13,16 +15,17 @@
         android:src="@drawable/ic_credit_card_svgrepo_com"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:contentDescription="@string/terminal" />
 
     <TextView
+        android:id="@+id/terminal_name_label"
         android:layout_width="0dp"
         android:layout_marginHorizontal="20dp"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:textSize="20sp"
-        android:text="Terminal"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="parent" />
